= master

* Support status_handler method :keep_headers option in status_handler plugin (jeremyevans) (#267)

* Make not_allowed plugin have r.root return 405 responses for non-GET requests (jeremyevans) (#266)

* In Rack 3, only require the parts of rack used by Roda, instead of requiring rack itself and relying on autoload (jeremyevans)
 
* Add run_require_slash plugin, for skipping application dispatch for remaining paths that would violate Rack SPEC (jeremyevans)

= 3.55.0 (2022-04-12)

* Allow passing blocks to the view method in the render plugin (jeremyevans) (#262)

* Add :forward_response_headers middleware plugin option to use app headers as default for response (janko) (#259)

= 3.54.0 (2022-03-14)

* Make chunked plugin not use Transfer-Encoding: chunked by default (jeremyevans)

* Make run_handler plugin close bodies for upstream 404 responses when using not_found: :pass (jeremyevans)

* Drop all 1xx bodies in the drop body plugin (jeremyevans)

* Do not set a Content-Length header for 205 responses on Rack <2.0.2 (jeremyevans)

* Use Rack::Files instead of Rack::File if available, to avoid deprecation warnings (jeremyevans)

* Work with Rack 3 SPEC, using Rack::Headers to handle lowercasing header keys on Rack 3 (jeremyevans)

* Allow overriding script tag type attribute returned by assets method in assets plugin (pusewicz) (#250)

* Make reloading render plugin after additional_view_directories plugin retain :allowed_paths (jeremyevans)

= 3.53.0 (2022-02-14)

* Make indifferent_params plugin support rack main branch (jeremyevans)

* Add additional_view_directories plugin, for checking multiple view directories for templates (jeremyevans) (#229)

= 3.52.0 (2022-01-14)

* Fix return value of Roda.freeze when multi_route plugin is used (jeremyevans) (#240)

* Use faster OpenSSL::Digest instead of Digest for assets plugin SRI support (jeremyevans)

* Drop development dependency on haml (jeremyevans)
