@@ -1,5 +1,7 @@
 = master
 
+* Do not set a body for 405 responses when using the verb methods in the not_allowed plugin (jeremyevans) (#267)
+
 * Support status_handler method :keep_headers option in status_handler plugin (jeremyevans) (#267)
 
 * Make not_allowed plugin have r.root return 405 responses for non-GET requests (jeremyevans) (#266)
